syntax = "proto2";

message LineOutGainSet {
    required float valueDB = 1;
}
