syntax = "proto2";

message RenamePresetAt {
    required string presetName = 1;
    required int32 presetSlot = 2;
}
