syntax = "proto2";
option csharp_namespace = "LtAmpDotNet.Lib.Models.Protobuf";

/*
 * Moves a preset to the specified point, shifting all other presets
 *
 * response: ShiftPresetStatus message
 */
message ShiftPreset {
    // Preset to shift
    required int32 indexToShiftFrom = 1;
    // Destination of preset to shift
    required int32 indexToShiftTo = 2;
}
