syntax = "proto2";
option csharp_namespace = "LtAmpDotNet.Lib.Models.Protobuf";

message SwapPreset {
    required int32 indexA = 1;
    required int32 indexB = 2;
}
